# hypermusic-server

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  api_8cpp.html  api_8cpp.js  api_8hpp.html  api_8hpp.js  api_8hpp_source.html  api__account_8cpp.html  api__account_8cpp.js  api__auth_8cpp.html  api__auth_8cpp.js  api__condition_8cpp.html  api__condition_8cpp.js  api__execute_8cpp.html  api__execute_8cpp.js  api__feature_8cpp.html  api__feature_8cpp.js  api__file_8cpp.html  api__file_8cpp.js  api__simple__form_8cpp.html  api__simple__form_8cpp.js  api__transformation_8cpp.html  api__transformation_8cpp.js  auth_8cpp.html  auth_8cpp.js  auth_8hpp.html  auth_8hpp.js  auth_8hpp_source.html  classdcn_1_1AuthManager-members.html  classdcn_1_1AuthManager.html  classdcn_1_1AuthManager.js  classdcn_1_1EVM-members.html  classdcn_1_1EVM.html  classdcn_1_1EVM.js  (+533 more)
.github/workflows/: build.yml  deploy.yml  docs.yml
cmake/: DecentralisedArtServerConfig.cmake.in  FetchPT.cmake  HypermusicServerConfig.cmake.in  add_module.cmake  compile_options.cmake  dependencies.cmake  protobuf_generate.cmake
cmake/HypermusicServer/: HypermusicServerTargets.cmake
include/: decentralised_art.hpp  hypermusic.hpp
resources/contracts/: HelloWorld.sol
resources/html/: simple_form.html
resources/js/: simple_form.js
resources/styles/: simple_form.css
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  concepts_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  (+74 more)
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt
src/api/include/: api.hpp
src/api/src/: api.cpp  api_account.cpp  api_auth.cpp  api_condition.cpp  api_execute.cpp  api_feature.cpp  api_file.cpp  api_simple_form.cpp  api_transformation.cpp  nonce.cpp  simple_form.cpp
src/auth/: CMakeLists.txt
src/auth/include/: auth.hpp  keccak256.hpp
src/auth/src/: auth.cpp  keccak256.cpp
src/cmd/: CMakeLists.txt
src/cmd/include/: cmd.hpp
src/cmd/src/: cmd.cpp
src/crypto/: CMakeLists.txt
src/crypto/include/: keccak256.hpp
src/crypto/src/: keccak256.cpp
src/evm/: CMakeLists.txt
src/evm/include/: evm.hpp  evm_formatter.hpp  evm_storage.hpp  evm_types.hpp
src/evm/src/: evm.cpp  evm_storage.cpp  evm_types.cpp
src/file/: CMakeLists.txt
src/file/include/: file.hpp
src/file/src/: file.cpp
src/http/: CMakeLists.txt
src/http/include/: http.hpp  http_codes.hpp  http_headers.hpp  http_method.hpp  url.hpp
src/http/src/: http.cpp  http_headers.cpp  http_method.cpp  url.cpp
src/loader/: CMakeLists.txt
src/loader/include/: loader.hpp
src/loader/src/: loader.cpp
src/native/: CMakeLists.txt
src/native/include/: native.h
src/native/include/mac/: mac.h
src/native/include/unix/: unix.h
src/native/include/windows/: windows.h
src/native/src/mac/: mac.cpp
src/native/src/unix/: unix.cpp
src/native/src/windows/: windows.cpp
src/parser/: CMakeLists.txt
src/parser/include/: parser.hpp
src/parser/src/: parser.cpp
src/pt/: CMakeLists.txt
src/pt/include/: condition.hpp  feature.hpp  pt.hpp  registry.hpp  samples.hpp  transformation.hpp
src/pt/proto/: condition.proto  feature.proto  samples.proto  transformation.proto
src/pt/src/: condition.cpp  feature.cpp  pt.cpp  registry.cpp  samples.cpp  simple_form.cpp  transformation.cpp
src/runner/: CMakeLists.txt
src/runner/include/: runner.hpp
src/runner/src/: runner.cpp
src/server/: CMakeLists.txt
src/server/include/: route.hpp  route_arg.hpp  route_key.hpp  server.hpp
src/server/src/: route.cpp  route_arg.cpp  route_key.cpp  server.cpp
src/session/: CMakeLists.txt
src/session/include/: session.hpp  session_manager.hpp
src/session/src/: session.cpp  session_manager.cpp
src/utils/: CMakeLists.txt
src/utils/include/: logo.hpp  utils.hpp
src/utils/src/: logo.cpp  utils.cpp
src/version/: CMakeLists.txt
src/version/include/: version.hpp
tests/: CMakeLists.txt
tests/include/: unit-tests.hpp
tests/install_package/: CMakeLists.txt  install_package.cpp
tests/src/: router-tests.cpp  tests.cpp  ut0.cpp
