add_subdirectory(native)
add_subdirectory(version)
add_subdirectory(utils)
add_subdirectory(crypto)
add_subdirectory(server)
add_subdirectory(http)
add_subdirectory(session)
add_subdirectory(parser)
add_subdirectory(pt)
add_subdirectory(evm)
add_subdirectory(file)
add_subdirectory(api)
add_subdirectory(auth)